update : Navigation bar

--- a/nav_bar.html
+++ b/nav_bar.html
@@ -17,6 +17,7 @@
             background-color:black;
             border-radius: 15px;
             font-family: 'Open Sans', sans-serif;
+            box-sizing: border-box;
         }
 
         .navigation li{
@@ -25,6 +26,12 @@
             padding: 5px;
 
         }
+
+        
+        .navigation li :hover{
+            font-weight: bolder;
+            font-size: large;
+        } 
 
         .navigation a{
             text-decoration: none;
