update : background image updated

--- a/display_property.html
+++ b/display_property.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Display Property</title>
     <style>
+        html{
+            min-height: 100%;
+            background-image: url(https://wallpaperaccess.com/full/2024167.jpg);
 
+            background-repeat: no-repeat;
+            background-position: center center;
+        }
+        .bg{
+
+        }
         header{
             border: 2px solid black;
             margin: auto;
@@ -76,7 +85,6 @@
          Usually, the term sky informally refers to a perspective from the Earth's surface; however, the meaning and usage can vary.</p>
     </div>
 
-    
     
 </body>
 </html>
